[package]
name = "mactime2"
version = "0.2.0"
edition = "2018"
authors = ["Jan Starke <Jan.Starke@t-systems.com>"]
description = "Replacement for `mactime`"
homepage = "https://www.github.com/janstarke/mactime2"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libmactime2"
path = "src/lib.rs"

[[bin]]
name = "mactime2"
path = "src/main.rs"

[features]
default = ["gzip"]
gzip = ["flate2"]

[dependencies]
bodyfile=">=0.1.4"
clap = "2"
anyhow = "1.0"
simplelog = "0.10"
log = "0.4"
bitflags = "1.3"
chrono = "0.4"
chrono-tz = "0.6"
flate2 = {version="1", optional=true}

[dev-dependencies]
more-asserts = "0.2"
rand = "0.8"