[package]
name = "mactime2"
version = "3.1.1"
edition = "2018"
authors = ["Jan Starke <Jan.Starke@t-systems.com>"]
description = "Replacement for `mactime`"
repository = "https://www.github.com/janstarke/mactime2"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libmactime2"
path = "src/lib.rs"

[[bin]]
name = "mactime2"
path = "src/main.rs"

[features]
default = ["gzip", "elastic"]
gzip = ["flate2"]
elastic = ["es4forensics", "serde_json"]

[dependencies]
bodyfile=">=0.1.4"
clap = {version="4", features=["wrap_help", "cargo"]}
clap-verbosity-flag = "2.0.0"
anyhow = "1.0"
simplelog = "0.12"
log = "0.4"
bitflags = "2"
chrono = "0.4"
chrono-tz = "0.8"
flate2 = {version="1", optional=true}
encoding_rs_io = "0.1"
encoding_rs = "0.8"
thiserror = "1"
# derive_builder = "0.11"

#es4forensics = {version="0.4.1", optional=true, path="../elastic4forensics", default-features=false}
es4forensics = {version="0.4.1", optional=true, default-features=false}
serde_json = {version = "1", optional=true}

[dev-dependencies]
more-asserts = "0.3"
rand = "0.8"